# event_adapter

./: .gitignore  CMakeLists.txt  README.md  vending_machine_demo  vending_machine_standalone.cpp
cmake/: event_adapter-config.cmake.in
docs/: LOGGING.md
examples/: CMakeLists.txt  keyboard_example.cpp  keyboard_simple.cpp  logging_config_example.cpp  python_trading_client.py  simple_example.cpp  test_trade.py  trading_system_example.cpp  trading_system_proper.cpp  web_trading_client.py  websocket_test_server.py
include/event_adapter/: data_source_adapter.hpp  event.hpp  event_dispatcher.hpp  event_filter.hpp  logging.hpp
include/event_adapter/adapters/: file_adapter.hpp  http_adapter.hpp  keyboard_adapter.hpp  websocket_adapter.hpp
tests/: CMakeLists.txt
